fixed margin spacing

--- a/src/Components/about.css
+++ b/src/Components/about.css
@@ -1,5 +1,6 @@
 .aboutUsDivContainer {
   display: flex;
+  margin-top: 30px;
 }
 
 .aboutUsDiv {
