--- a/src/Components/home.css
+++ b/src/Components/home.css
@@ -5,6 +5,7 @@
   overflow: hidden;
   position: relative;
   border-radius: 20px;
+  margin-top: 30px;
 }
 
 .awardWinningDivText {
