--- a/src/Components/location.css
+++ b/src/Components/location.css
@@ -1,4 +1,9 @@
-.canadaContainer,
+.canadaContainer {
+  display: flex;
+  gap: 10px;
+  margin: 30px 0;
+}
+
 .australiaContainer, 
 .unitedKingdomContainer {
   display: flex;
