--- a/src/Components/title.css
+++ b/src/Components/title.css
@@ -1,5 +1,5 @@
 .navigationBar {
-  margin-top: 10px;
+  margin-top: 20px;
 }
 
 .navItems {
