--- a/src/Components/webdesign.css
+++ b/src/Components/webdesign.css
@@ -9,6 +9,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin-top: 30px;
 }
 
 .webDesignDiv > p {
